users: better looking profile edit page

--- a/prologin/prologin/static/css/prologin.css
+++ b/prologin/prologin/static/css/prologin.css
@@ -1102,6 +1102,14 @@ label[for$="clear_id"] {
   margin: 0;
 }
 
+.smaller {
+  font-size: .8em;
+}
+
+.asteriskField {
+  display: none;
+}
+
 /**
  * select2 with Bootstrap 3
  */
