--- a/prologin/mailing/templates/mailing/dashboard.html
+++ b/prologin/mailing/templates/mailing/dashboard.html
@@ -14,6 +14,11 @@
 
   <h1>{% trans "Mailing dashboard" %}</h1>
 
+  <p>
+    <a href="{% url 'mailing:batch:list' %}" class="btn btn-default"><i class="fa fa-list"></i> {% trans "All batches" %}</a>
+    <a href="{% url 'mailing:batch:new' %}" class="btn btn-primary"><i class="fa fa-paper-plane-o"></i> {% trans "Send a new batch" %}</a>
+  </p>
+
   <div class="row">
     <div class="col-md-6">
       <a href="{% url 'mailing:template:new' %}" class="btn btn-info pull-right">
