mailing: forgot a trans

--- a/prologin/mailing/templates/mailing/batch-list.html
+++ b/prologin/mailing/templates/mailing/batch-list.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 
-  <h1>Email batches</h1>
+  <h1>{% trans "Batches" %}</h1>
 
   <a href="{% url 'mailing:batch:new' %}" class="btn btn-primary"><i class="fa fa-paper-plane-o"></i> {% trans "New batch" %}</a>
 
