--- a/prologin/mailing/templates/mailing/template/details.html
+++ b/prologin/mailing/templates/mailing/template/details.html
@@ -77,7 +77,7 @@
 
       <div class="col-md-6">
         <h2>{% trans "Preview" %}</h2>
-        <div>
+        <div style="overflow: hidden">
           <ul class="nav nav-tabs" role="tablist">
             <li role="presentation" class="active">
               <a href="#preview-plain" aria-controls="preview-plain" role="tab"
@@ -105,17 +105,17 @@
           </ul>
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane active" id="preview-plain">
-              <div class="preview-content">
-                <code>Subject: <span class="preview-subject-content"></span></code>
+              <div class="preview-container">
+                {% spaceless %}<div class="preview-subject"><div class="wrap-ruler"></div><div></div></div>{% endspaceless %}
                 <hr>
-                <pre id="preview-plain-content"></pre>
+                {% spaceless %}<div class="preview-content"><div class="wrap-ruler"></div><div></div></div>{% endspaceless %}
               </div>
             </div>
             <div role="tabpanel" class="tab-pane" id="preview-html">
-              <div class="preview-content">
-                Subject: <span class="preview-subject-content"></span>
+              <div class="preview-container">
+                <div class="preview-subject"></div>
                 <hr>
-                <div id="preview-html-content"></div>
+                <div class="preview-content"></div>
               </div>
             </div>
           </div>
