users: fix unsubscribe template

--- a/prologin/users/templates/users/unsubscribe.html
+++ b/prologin/users/templates/users/unsubscribe.html
@@ -43,7 +43,7 @@
     </div>
   </form>
 {% else %}
-    <p><strong>{{ unsubscribe_user.email }}</strong>{% blocktrans %} has
+  <p>{% blocktrans with email=unsubscribe_user.email %}<code>{{ email }}</code> has
     already been unsubscribed. You will receive no further e-mails from
     Prologin.{% endblocktrans %}</p>
 {% endif %}
