--- a/prologin/users/templates/users/login.html
+++ b/prologin/users/templates/users/login.html
@@ -28,7 +28,7 @@
         </div>
       </form>
     </div>
-    <div class="col-md-4 col-md-offset-1">
+    <div class="col-md-5">
       <h2>{% trans "Need an account?" %}</h2>
 
       <p>{% blocktrans %}You can create a new account anytime. It's free, you just need an email
