--- a/prologin/contest/templates/contest/school-select-option.html
+++ b/prologin/contest/templates/contest/school-select-option.html
@@ -1,5 +1,5 @@
 <option value="{{ widget.value }}"{% include "django/forms/widgets/attrs.html" %}
-{% if widget.label %}
+{% if widget.label and widget.label.date_begin %} {# don't enter this block if this is the empty-value label #}
   data-name="{{ widget.label.date_begin|date:'SHORT_DATE_FORMAT' }} — {{ widget.label.center.name }}"
   data-addr="{{ widget.label.center.address }}, {{ widget.label.center.postal_code }} {{ widget.label.center.city }}">
   {{ widget.label.date_begin|date:'SHORT_DATE_FORMAT' }} — {{ widget.label.center.name }} — {{ widget.label.center.address }},
