--- a/prologin/prologin/templates/prologin/stub-impersonate-warning.html
+++ b/prologin/prologin/templates/prologin/stub-impersonate-warning.html
@@ -1,16 +1,14 @@
 {% load i18n %}
 {% if request.session.is_hijacked_user %}
-  <div id="hijacked-warning-wrapper">
-    <div id="hijacked-warning" class="hijacked-warning hijacked-warning-boostrap" role="alert" data-spy="affix">
-      <div class="container">
-      <form action="{% url 'release_hijack' %}" method="post">{% csrf_token %}
-        <button type="submit" class="btn btn-default btn-xs pull-right">
-          <i class="fa fa-sign-out"></i> {% trans "Exit session" %}</button>
-      </form>
-        <i class="fa fa-fw fa-user-secret"></i>
-        {% blocktrans with user=request.user %}You are currently browsing on behalf of <strong>{{ user }}</strong>. Keep
-          focused.{% endblocktrans %}
-      </div>
+  <div class="hijacked-warning" role="alert">
+    <div class="container">
+    <form action="{% url 'hijack:release_hijack' %}" method="post">{% csrf_token %}
+      <button type="submit" class="btn btn-default btn-xs pull-right">
+        <i class="fa fa-sign-out"></i> {% trans "Exit session" %}</button>
+    </form>
+      <i class="fa fa-fw fa-user-secret"></i>
+      {% blocktrans with user=request.user %}You are currently browsing on behalf of <strong>{{ user }}</strong>. Keep
+        focused.{% endblocktrans %}
     </div>
   </div>
 {% endif %}
