--- a/prologin/users/templates/users/profile.html
+++ b/prologin/users/templates/users/profile.html
@@ -17,6 +17,9 @@
   {% if shown_user.id == user.id or see_private %}
   <a href="{% url 'users:edit' shown_user.id %}" class="btn btn-default pull-right">
     <i class="fa fa-pencil"></i> {% trans "Edit profile" %}</a>
+
+   <a href="{% url 'users:delete' shown_user.id %}" class="btn btn-default pull-right">
+    {% trans "Delete profile" %}</a>
   {% endif %}
 
   <h1>{{ shown_user.username }}</h1>
