--- a/prologin/users/templates/users/delete_confirm.html
+++ b/prologin/users/templates/users/delete_confirm.html
@@ -2,6 +2,6 @@
 {% load i18n %}
 {% load bootstrap django_bootstrap_breadcrumbs crispy_forms_tags %}
 
-{% block title %}{% blocktrans %} Account succesfuly deleted {% endblocktrans %}{% endblock %}
+{% block title %}{% trans "Delete Account" %}{% endblock %}
 
 
