--- a/prologin/users/templates/users/edit.html
+++ b/prologin/users/templates/users/edit.html
@@ -24,4 +24,22 @@
   {% crispy form %}
   <button class="btn btn-primary btn-block" type="submit"><i class="fa fa-save"></i> {% trans "Save" %}</button>
 </form>
+
+
+<br />
+<div class="row">
+<!-- Delete Account -->
+	<div class="Subhead Subhead--spacious">
+	  <h1 style = "color: #d9534f;"> <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+ Delete account</h1>
+	</div>
+
+  
+  <p>{% trans "Are you sure you sure you want to delete your account ?" %}</p>
+  <p>{% trans "This will delete all your personnal informations, all your posts on the forum and all the code you have submited." %}</p>
+
+  <a href="{% url 'users:delete' user.id %}" class="btn btn-danger">
+  {% trans "Delete Account" %}</a>
+</div>
+
 {% endblock %}
